Removed overflow:hidden to avoid scrolling problem in inphone

--- a/css/style.css
+++ b/css/style.css
@@ -221,11 +221,6 @@ code {
 	margin-top: 18px;
 }
 
-.navbar-collapse {
-	box-shadow: none;
-	border-top: none;
-}
-
 .nav>li {
     background-color: black;
 }
